h1. CHANGELOG

h3. 3.1.26 May 15, 2017

* restore support for Rails 5.0 for learn-rails application

h3. 3.1.25 May 15, 2017

* add jQuery option via gem or yarn (because Rails 5.1 drops jQuery and Bootstrap needs it)
* remove 'minitest-rails-capybara' gem from learn-rails recipe (not needed for Rails 5.1)

h3. 3.1.24 May 7, 2017

* 'secrets.yml' file in Rails 5 contains string 'production:' twice

h3. 3.1.23 May 7, 2017

* SimpleForm is incompatible with Rails 5.1
* 'learn-rails' application no longer uses SimpleForm

h3. 3.1.22 April 27, 2017

* announce Kickstarter campaign

h3. 3.1.21 November 23, 2016

* accommodate Rails 5.0.1 (fixes https://github.com/RailsApps/rails-composer/issues/261)

h3. 3.1.20 November 23, 2016

* generate 'administrate:install' at stage four

h3. 3.1.19 November 22, 2016

* add gem 'bourbon' for the administrate option

h3. 3.1.18 October 30, 2016

* Segment.io now named Segment.com
* Upmin Admin is no longer actively maintained

h3. 3.1.17 October 30, 2016

* no need for app.json file when 'Deploy to Heroku' button is gone

h3. 3.1.16 October 30, 2016

* add minitest gem to learn-rails recipe
* no need to precompile assets for Heroku with Rails 5
* I doubt that anyone uses the 'Deploy to Heroku' button
* add 'rvmrc' preference for .ruby-gemset and .ruby-version files

h3. 3.1.15 October 30, 2016

* no Bootstrap page templates needed for learn-rails recipe (fix)

h3. 3.1.14 October 29, 2016

* remove rails_12factor gem not needed for Rails 5
* make Puma web server default for Rails 5 (not Webrick)
* no Bootstrap page templates needed for learn-rails recipe
* add tests to learn-rails recipe
* create db/schema.rb file for learn-rails recipe

h3. 3.1.13 October 29, 2016

* use bootstrap3 not foundation for learn-rails recipe
* add test helper for learn-rails recipe

h3. 3.1.12 October 29, 2016

* sendgrid gem not needed for mail

h3. 3.1.12 October 29, 2016

* released prematurely

h3. 3.1.10 September 5, 2016

* add Bootstrap 4 option
