@@ -59,10 +59,12 @@ if prefer :tests, 'rspec'
   add_gem 'spring-commands-rspec', :group => :development
   add_gem 'factory_girl_rails', :group => [:development, :test]
   add_gem 'faker', :group => [:development, :test]
-  add_gem 'capybara', :group => :test
+  unless Rails::VERSION::MAJOR == 5 && Rails::VERSION::MINOR >= 1
+    add_gem 'capybara', :group => :test
+    add_gem 'selenium-webdriver', :group => :test
+  end
   add_gem 'database_cleaner', :group => :test
   add_gem 'launchy', :group => :test
-  add_gem 'selenium-webdriver', :group => :test
   if prefer :continuous_testing, 'guard'
     add_gem 'guard-bundler', :group => :development
     add_gem 'guard-rails', :group => :development
