@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.1.26"
+  VERSION = "3.1.27"
 end
