@@ -1,5 +1,10 @@
 h1. CHANGELOG
 
+h3. 3.1.27 May 17, 2017
+
+* remove gem 'capybara' for Rails 5.1 (already included in Rails 5.1)
+* remove gem 'selenium-webdriver'for Rails 5.1 (already included in Rails 5.1)
+
 h3. 3.1.26 May 15, 2017
 
 * restore support for Rails 5.0 for learn-rails application
